fixed all the  nav bar which electric broke

--- a/html/popular.html
+++ b/html/popular.html
@@ -10,72 +10,83 @@
     <title>Popular Works</title>
 </head>
 <body class="dark:bg-black" >
-<nav class="bg-transparent shadow-lg pt-3 dark:bg-black">
-  <div class="max-w-7xl mx-auto px-2 sm:px-6 lg:px-8">
-    <div class="relative flex items-center justify-between h-16">
-      <div class="absolute inset-y-0 left-0 flex items-center sm:hidden">
-        <!-- Mobile menu button-->
-        <button id="togglemebutton" class="inline-flex items-center justify-center p-2 rounded-md text-gray-400 hover:text-white hover:bg-gray-700 focus:outline-none focus:bg-gray-700 focus:text-white transition duration-150 ease-in-out" aria-label="Main menu"
-          aria-expanded="false">
-          <!-- Icon when menu is closed. -->
-          <!-- Menu open: "hidden", Menu closed: "block" -->
-          <svg class="block h-6 w-6" fill="none" viewBox="0 0 24 24" stroke="currentColor">
-            <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M4 6h16M4 12h16M4 18h16" />
-          </svg>
-          <!-- Icon when menu is open. -->
-          <!-- Menu open: "block", Menu closed: "hidden" -->
-          <svg class="hidden h-6 w-6" fill="none" viewBox="0 0 24 24" stroke="currentColor">
-            <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M6 18L18 6M6 6l12 12" />
-          </svg>
-        </button>
-      </div>
-      <div class="flex-1 flex items-center justify-center sm:items-stretch sm:justify-start">
-        <div class="flex-shrink-0">
-          <a href="/"> <p class="block lg:block h-8 w-auto font-poppins font-bold mr-10 text-4xl dark:text-cyan-400">YUME.</p></a>
-      
+  <nav class="bg-transparent shadow-lg pt-3 dark:bg-black">
+    <div class="max-w-7xl mx-auto px-2 sm:px-6 lg:px-8">
+      <div class="relative flex items-center justify-between h-16">
+        <div class="absolute inset-y-0 left-0 flex items-center sm:hidden">
+          <!-- Mobile menu button-->
+          <button id="togglemebutton"
+            class="inline-flex items-center justify-center p-2 rounded-md text-gray-400 hover:text-white hover:bg-gray-700 focus:outline-none focus:bg-gray-700 focus:text-white transition duration-150 ease-in-out"
+            aria-label="Main menu" aria-expanded="false">
+            <!-- Icon when menu is closed. -->
+            <!-- Menu open: "hidden", Menu closed: "block" -->
+            <svg class="block h-6 w-6" fill="none" viewBox="0 0 24 24" stroke="currentColor">
+              <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M4 6h16M4 12h16M4 18h16" />
+            </svg>
+            <!-- Icon when menu is open. -->
+            <!-- Menu open: "block", Menu closed: "hidden" -->
+            <svg class="hidden h-6 w-6" fill="none" viewBox="0 0 24 24" stroke="currentColor">
+              <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M6 18L18 6M6 6l12 12" />
+            </svg>
+          </button>
         </div>
-        <div class="hidden sm:block sm:ml-6">
-          <div class="flex">
-            <a href="/" class="px-3 py-2 rounded-md text-2xl font-medium leading-5 text-gray-700 dark:text-white hover:text-white hover:bg-gray-700 focus:outline-none focus:text-white focus:bg-gray-700 transition duration-150 ease-in-out">Read</a>
-            <a href="/search" class="ml-4 px-3 py-2 rounded-md text-2xl font-medium leading-5 dark:text-white text-gray-700 hover:text-white hover:bg-gray-700 focus:outline-none focus:text-white focus:bg-gray-700 transition duration-150 ease-in-out">Search</a>
-            <a href="/library" class="ml-4 px-3 py-2 rounded-md text-2xl font-medium leading-5 text-gray-700 dark:text-white hover:text-white hover:bg-gray-700 focus:outline-none focus:text-white focus:bg-gray-700 transition duration-150 ease-in-out">Your library</a>
-            <a href="/popular" class="ml-4 px-3 py-2 rounded-md text-2xl font-medium leading-5 text-white dark:text-black dark:bg-white bg-black focus:outline-none focus:text-white focus:bg-gray-700 transition duration-150 ease-in-out">Popular</a>
+        <div class="flex-1 flex items-center justify-center sm:items-stretch sm:justify-start">
+          <div class="flex-shrink-0">
+            <a href="/">
+              <p class="block lg:block h-8 w-auto font-poppins font-bold mr-10 text-4xl dark:text-cyan-400">YUME.</p>
+            </a>
+  
           </div>
-        </div>
-      </div>
-      <div class="relative mx-auto text-gray-600 md:block hidden ">
-				   
-				<input
-					class="border-2 border-gray-300 bg-white h-10 rounded-lg text-sm focus:outline-none" id="seriesSearchBar"
-					type="search" name="search" placeholder="Search">
-				<button type="submit" class="absolute right-0 top-0 mt-3 mr-2">
-					<svg class="text-gray-600 h-4 w-4 fill-current" xmlns="http://www.w3.org/2000/svg"
-						 version="1.1" id="Capa_1" x="0px" y="0px"
-						 viewBox="0 0 56.966 56.966" style="enable-background:new 0 0 56.966 56.966;"
-						 xml:space="preserve"
-						 width="512px" height="512px">
-				<path
-					d="M55.146,51.887L41.588,37.786c3.486-4.144,5.396-9.358,5.396-14.786c0-12.682-10.318-23-23-23s-23,10.318-23,23  s10.318,23,23,23c4.761,0,9.298-1.436,13.177-4.162l13.661,14.208c0.571,0.593,1.339,0.92,2.162,0.92  c0.779,0,1.518-0.297,2.079-0.837C56.255,54.982,56.293,53.08,55.146,51.887z M23.984,6c9.374,0,17,7.626,17,17s-7.626,17-17,17  s-17-7.626-17-17S14.61,6,23.984,6z"/>
-			  </svg>
-				</button>
-			</div>
-      <div class="absolute inset-y-0 right-0 flex items-center pr-2 sm:static sm:inset-auto sm:ml-6 sm:pr-0">
-
-
-        <!-- Profile dropdown -->
-        <div class="ml-3 relative">
-          <div>
-            <div id="authButtons" class="hidden md:flex items-center space-x-3 ">
-              <a href="/signin" class="py-2 px-2 font-medium text-gray-300 rounded hover:bg-cyan-500 hover:text-white transition duration-300">Log In</a>
-              <a href="/signup" class="py-2 px-2 font-medium text-white bg-cyan-500 rounded hover:bg-cyan-400 transition duration-300">Sign Up</a>
+          <div class="hidden sm:block sm:ml-6">
+            <div class="flex">
+              <a href="/"
+                class="px-3 py-2 rounded-md text-2xl font-medium leading-5 text-gray-700 dark:text-white hover:text-white hover:bg-gray-700 focus:outline-none focus:text-white focus:bg-gray-700 transition duration-150 ease-in-out">Read</a>
+              <a href="/list"
+                class="ml-4 px-3 py-2 rounded-md text-2xl font-medium leading-5 text-gray-700 dark:text-white hover:text-white hover:bg-gray-700 focus:outline-none focus:text-white focus:bg-gray-700 transition duration-150 ease-in-out">Genres</a>
+              <a href="/library"
+                class="ml-4 px-3 py-2 rounded-md text-2xl font-medium leading-5 text-gray-700 dark:text-white hover:text-white hover:bg-gray-700 focus:outline-none focus:text-white focus:bg-gray-700 transition duration-150 ease-in-out">Your
+                library</a>
+              <a href="/popular"
+                class="ml-4 px-3 py-2 rounded-md text-2xl font-medium leading-5 text-white dark:text-black dark:bg-white bg-black focus:outline-none focus:text-white focus:bg-gray-700 transition duration-150 ease-in-out">Popular</a>
             </div>
-            <button id="toggleprofile" class="flex text-sm border-2 object-cover border-transparent rounded-full focus:outline-none focus:border-white transition duration-150 ease-in-out" id="user-menu" aria-label="User menu" aria-haspopup="true">
-              <img class="h-8 w-8 rounded-full" id="pfp" src="" alt="">
-            </button>
           </div>
-          <!--
+        </div>
+        <div class="relative mx-auto text-gray-600 md:block hidden ">
+  
+          <input class="border-2 border-gray-300 bg-white h-10 rounded-lg text-sm focus:outline-none"
+            id="seriesSearchBar" type="search" name="search" placeholder="Search">
+          <button type="submit" class="absolute right-0 top-0 mt-3 mr-2">
+            <svg class="text-gray-600 h-4 w-4 fill-current" xmlns="http://www.w3.org/2000/svg" version="1.1" id="Capa_1"
+              x="0px" y="0px" viewBox="0 0 56.966 56.966" style="enable-background:new 0 0 56.966 56.966;"
+              xml:space="preserve" width="512px" height="512px">
+              <path
+                d="M55.146,51.887L41.588,37.786c3.486-4.144,5.396-9.358,5.396-14.786c0-12.682-10.318-23-23-23s-23,10.318-23,23  s10.318,23,23,23c4.761,0,9.298-1.436,13.177-4.162l13.661,14.208c0.571,0.593,1.339,0.92,2.162,0.92  c0.779,0,1.518-0.297,2.079-0.837C56.255,54.982,56.293,53.08,55.146,51.887z M23.984,6c9.374,0,17,7.626,17,17s-7.626,17-17,17  s-17-7.626-17-17S14.61,6,23.984,6z" />
+            </svg>
+          </button>
+        </div>
+        <div class="absolute inset-y-0 right-0 flex items-center pr-2 sm:static sm:inset-auto sm:ml-6 sm:pr-0">
+  
+  
+          <!-- Profile dropdown -->
+          <div class="ml-3 relative">
+            <div>
+              <div id="authButtons" class="hidden md:flex items-center space-x-3 ">
+                <a href="/signin"
+                  class="py-2 px-2 font-medium text-gray-300 rounded hover:bg-cyan-500 hover:text-white transition duration-300">Log
+                  In</a>
+                <a href="/signup"
+                  class="py-2 px-2 font-medium text-white bg-cyan-500 rounded hover:bg-cyan-400 transition duration-300">Sign
+                  Up</a>
+              </div>
+              <button id="toggleprofile"
+                class="flex text-sm border-2 object-cover border-transparent rounded-full focus:outline-none focus:border-white transition duration-150 ease-in-out"
+                id="user-menu" aria-label="User menu" aria-haspopup="true">
+                <img class="h-8 w-8 rounded-full" id="pfp" src="" alt="">
+              </button>
+            </div>
+            <!--
             Profile dropdown panel, show/hide based on dropdown state.
-
+  
             Entering: "transition ease-out duration-100"
               From: "transform opacity-0 scale-95"
               To: "transform opacity-100 scale-100"
@@ -83,32 +94,66 @@
               From: "transform opacity-100 scale-100"
               To: "transform opacity-0 scale-95"
           -->
-          <div id="resultprofile" class="hidden z-40 origin-top-right absolute right-0 mt-2 w-48 rounded-md shadow-lg">
-            <div class="py-1 rounded-md bg-white shadow-xs" role="menu" aria-orientation="vertical" aria-labelledby="user-menu">
-              <a href="/account" class="block px-4 py-2 text-sm leading-5 text-gray-700 hover:bg-gray-100 focus:outline-none focus:bg-gray-100 transition duration-150 ease-in-out" role="menuitem">Your Profile</a>
-              <a href="/dashboard/home" class="block px-4 py-2 text-sm leading-5 text-gray-700 hover:bg-gray-100 focus:outline-none focus:bg-gray-100 transition duration-150 ease-in-out" role="menuitem">Dashboard</a>
-              <a id="signOut" class="block px-4 py-2 text-sm leading-5 text-gray-700 hover:bg-gray-100 focus:outline-none focus:bg-gray-100 transition duration-150 ease-in-out" role="menuitem">Sign out</a>
+            <div id="resultprofile"
+              class="hidden z-40 origin-top-right absolute right-0 mt-2 w-48 rounded-md shadow-lg">
+              <div class="py-1 rounded-md bg-white shadow-xs" role="menu" aria-orientation="vertical"
+                aria-labelledby="user-menu">
+                <a href="/account"
+                  class="block px-4 py-2 text-sm leading-5 text-gray-700 hover:bg-gray-100 focus:outline-none focus:bg-gray-100 transition duration-150 ease-in-out"
+                  role="menuitem">Your Profile</a>
+                <a href="/dashboard/home"
+                  class="block px-4 py-2 text-sm leading-5 text-gray-700 hover:bg-gray-100 focus:outline-none focus:bg-gray-100 transition duration-150 ease-in-out"
+                  role="menuitem">Dashboard</a>
+                <a id="signOut"
+                  class="block px-4 py-2 text-sm leading-5 text-gray-700 hover:bg-gray-100 focus:outline-none focus:bg-gray-100 transition duration-150 ease-in-out"
+                  role="menuitem">Sign out</a>
+              </div>
             </div>
           </div>
         </div>
       </div>
     </div>
-  </div>
-
-  <!--
+  
+    <!--
     Mobile menu, toggle classes based on menu state.
-
+  
     Menu open: "block", Menu closed: "hidden"
   -->
-  <div id="resultnav" class="hidden sm:hidden">
-    <div class="px-2 pt-2 pb-3">
-      <a href="/" class="block px-3 py-2 rounded-md text-base font-medium text-white bg-gray-900 focus:outline-none focus:text-white focus:bg-gray-700 transition duration-150 ease-in-out">Read</a>
-      <a href="/search" class="mt-1 block px-3 py-2 rounded-md text-base font-medium text-gray-700 hover:text-white hover:bg-gray-700 focus:outline-none focus:text-white focus:bg-gray-700 transition duration-150 ease-in-out">Search</a>
-      <a href="/library" class="mt-1 block px-3 py-2 rounded-md text-base font-medium text-gray-700 hover:text-white hover:bg-gray-700 focus:outline-none focus:text-white focus:bg-gray-700 transition duration-150 ease-in-out">Your library</a>
-      <a href="/popular" class="mt-1 block px-3 py-2 rounded-md text-base font-medium text-gray-700 hover:text-white hover:bg-gray-700 focus:outline-none focus:text-white focus:bg-gray-700 transition duration-150 ease-in-out">Popular</a>
+    <div id="resultnav" class="hidden sm:hidden">
+      <div class="px-2 pt-2 pb-3">
+        <a href="/"
+          class="block px-3 py-2 rounded-md text-base font-medium text-white bg-gray-900 focus:outline-none focus:text-white focus:bg-gray-700 transition duration-150 ease-in-out">Read</a>
+        <a href="/search"
+          class="mt-1 block px-3 py-2 rounded-md text-base font-medium text-gray-700 hover:text-white hover:bg-gray-700 focus:outline-none focus:text-white focus:bg-gray-700 transition duration-150 ease-in-out">Search</a>
+        <a href="/library"
+          class="mt-1 block px-3 py-2 rounded-md text-base font-medium text-gray-700 hover:text-white hover:bg-gray-700 focus:outline-none focus:text-white focus:bg-gray-700 transition duration-150 ease-in-out">Your
+          library</a>
+        <a href="/popular"
+          class="mt-1 block px-3 py-2 rounded-md text-base font-medium text-gray-700 hover:text-white hover:bg-gray-700 focus:outline-none focus:text-white focus:bg-gray-700 transition duration-150 ease-in-out">Popular</a>
+      </div>
     </div>
-  </div>
-</nav>
+    <script>document.getElementById('togglemebutton').onclick = function () {
+        document.getElementById("resultnav").classList.toggle("hidden");
+      }
+  
+      //document.getElementById('togglemebutton').onclick = function () {
+      //  document.getElementById("toggleme").classList.toggle("hidden");
+      //}
+  
+  
+      const toggleprofile = document.getElementById("toggleprofile");
+      const resultprofile = document.getElementById("resultprofile");
+      [...document.querySelectorAll('body')].forEach(el => {
+        el.addEventListener('click', event => {
+          if (event.target.parentElement.id !== "toggleprofile") {
+            console.log(event.target.parentElement.id)
+            resultprofile.classList.add("hidden")
+          } else {
+            resultprofile.classList.toggle("hidden")
+          }
+        })
+      })</script>
+  </nav>
 
 
 
