--- a/html/library.html
+++ b/html/library.html
@@ -39,16 +39,16 @@
             <a href="/">
               <p class="block lg:block h-8 w-auto font-poppins font-bold mr-10 text-4xl dark:text-cyan-400">YUME.</p>
             </a>
-
+  
           </div>
           <div class="hidden sm:block sm:ml-6">
             <div class="flex">
               <a href="/"
-                class="ml-4 px-3 py-2 rounded-md text-2xl font-medium leading-5 text-gray-700 dark:text-white hover:text-white hover:bg-gray-700 focus:outline-none focus:text-white focus:bg-gray-700 transition duration-150 ease-in-out      ">Read</a>
-              <a href="/search"
-                class="ml-4 px-3 py-2 rounded-md text-2xl font-medium leading-5 dark:text-white text-gray-700 hover:text-white hover:bg-gray-700 focus:outline-none focus:text-white focus:bg-gray-700 transition duration-150 ease-in-out">Search</a>
+                class="px-3 py-2 rounded-md text-2xl font-medium leading-5 text-gray-700 dark:text-white hover:text-white hover:bg-gray-700 focus:outline-none focus:text-white focus:bg-gray-700 transition duration-150 ease-in-out">Read</a>
+              <a href="/list"
+                class="ml-4 px-3 py-2 rounded-md text-2xl font-medium leading-5 text-gray-700 dark:text-white hover:text-white hover:bg-gray-700 focus:outline-none focus:text-white focus:bg-gray-700 transition duration-150 ease-in-out">Genres</a>
               <a href="/library"
-                class="px-3 py-2 rounded-md text-2xl font-medium leading-5 text-white dark:text-black dark:bg-white bg-black focus:outline-none focus:text-white focus:bg-gray-700 transition duration-150 ease-in-out ml-4">Your
+                class="ml-4 px-3 py-2 rounded-md text-2xl font-medium leading-5 text-white dark:text-black dark:bg-white bg-black focus:outline-none focus:text-white focus:bg-gray-700 transition duration-150 ease-in-out">Your
                 library</a>
               <a href="/popular"
                 class="ml-4 px-3 py-2 rounded-md text-2xl font-medium leading-5 text-gray-700 dark:text-white hover:text-white hover:bg-gray-700 focus:outline-none focus:text-white focus:bg-gray-700 transition duration-150 ease-in-out">Popular</a>
@@ -56,7 +56,7 @@
           </div>
         </div>
         <div class="relative mx-auto text-gray-600 md:block hidden ">
-
+  
           <input class="border-2 border-gray-300 bg-white h-10 rounded-lg text-sm focus:outline-none"
             id="seriesSearchBar" type="search" name="search" placeholder="Search">
           <button type="submit" class="absolute right-0 top-0 mt-3 mr-2">
@@ -69,8 +69,8 @@
           </button>
         </div>
         <div class="absolute inset-y-0 right-0 flex items-center pr-2 sm:static sm:inset-auto sm:ml-6 sm:pr-0">
-
-
+  
+  
           <!-- Profile dropdown -->
           <div class="ml-3 relative">
             <div>
@@ -90,7 +90,7 @@
             </div>
             <!--
             Profile dropdown panel, show/hide based on dropdown state.
-
+  
             Entering: "transition ease-out duration-100"
               From: "transform opacity-0 scale-95"
               To: "transform opacity-100 scale-100"
@@ -117,24 +117,46 @@
         </div>
       </div>
     </div>
-
+  
     <!--
     Mobile menu, toggle classes based on menu state.
-
+  
     Menu open: "block", Menu closed: "hidden"
   -->
     <div id="resultnav" class="hidden sm:hidden">
       <div class="px-2 pt-2 pb-3">
         <a href="/"
-          class="mt-1 block px-3 py-2 rounded-md text-base font-medium text-white bg-gray-900 focus:outline-none focus:text-white  focus:bg-gray-700 transition duration-150 ease-in-out  ">Read</a>
+          class="block px-3 py-2 rounded-md text-base font-medium text-white bg-gray-900 focus:outline-none focus:text-white focus:bg-gray-700 transition duration-150 ease-in-out">Read</a>
         <a href="/search"
           class="mt-1 block px-3 py-2 rounded-md text-base font-medium text-gray-700 hover:text-white hover:bg-gray-700 focus:outline-none focus:text-white focus:bg-gray-700 transition duration-150 ease-in-out">Search</a>
         <a href="/library"
-          class="block px-3 py-2 rounded-md text-base font-medium text-white bg-gray-900 focus:outline-none focus:text-white focus:bg-gray-700 transition duration-150 ease-in-out">Your library</a>
+          class="mt-1 block px-3 py-2 rounded-md text-base font-medium text-gray-700 hover:text-white hover:bg-gray-700 focus:outline-none focus:text-white focus:bg-gray-700 transition duration-150 ease-in-out">Your
+          library</a>
         <a href="/popular"
           class="mt-1 block px-3 py-2 rounded-md text-base font-medium text-gray-700 hover:text-white hover:bg-gray-700 focus:outline-none focus:text-white focus:bg-gray-700 transition duration-150 ease-in-out">Popular</a>
       </div>
     </div>
+    <script>document.getElementById('togglemebutton').onclick = function () {
+        document.getElementById("resultnav").classList.toggle("hidden");
+      }
+  
+      //document.getElementById('togglemebutton').onclick = function () {
+      //  document.getElementById("toggleme").classList.toggle("hidden");
+      //}
+  
+  
+      const toggleprofile = document.getElementById("toggleprofile");
+      const resultprofile = document.getElementById("resultprofile");
+      [...document.querySelectorAll('body')].forEach(el => {
+        el.addEventListener('click', event => {
+          if (event.target.parentElement.id !== "toggleprofile") {
+            console.log(event.target.parentElement.id)
+            resultprofile.classList.add("hidden")
+          } else {
+            resultprofile.classList.toggle("hidden")
+          }
+        })
+      })</script>
   </nav>
   <!-- <header
     class="flex dark:bg-background mt-2 border-t-0 border-x-0 dark:border-none w-screen items-center text-center justify-center gap-7 border h-16 z-40">
@@ -144,7 +166,7 @@
     <p class="text-base font-bold uppercase hover:underline dark:text-gray-100 cursor-pointer">Web Novels</p>
     <p class="text-base font-bold uppercase hover:underline dark:text-gray-100 cursor-pointer">Web Novels</p>
   </header> -->
-  <div class="bg-transparent w-screen dark:bg-background">
+  <div class="bg-transparent w-screen dark:bg-background h-screen">
     <div class="max-w-2xl mx-auto py-16 px-4 sm:py-24 sm:px-6 lg:max-w-7xl lg:px-8 dark:text-white">
       <h2 class="text-2xl font-extrabold tracking-tight text-gray-900 dark:text-white">Series you follow</h2>
 
