--- a/html/creator.html
+++ b/html/creator.html
@@ -566,6 +566,82 @@
                         <h4 class="mb-4 mt-5 text-lg font-semibold text-black dark:text-gray-300">
                           Samples:
                         </h4>
+                        <section class="overflow-hidden text-gray-700 ">
+                          <div class="container px-5 py-2 mx-auto lg:pt-12 lg:px-32">
+                            <div class="flex flex-wrap -m-1 md:-m-2">
+                              <div class="flex flex-wrap w-1/3">
+                                <div class="w-full p-1 md:p-2">
+                                  <img alt="gallery" class="block object-cover object-center w-full h-full rounded-lg"
+                                    src="https://mdbcdn.b-cdn.net/img/Photos/Horizontal/Nature/4-col/img%20(73).webp">
+                                </div>
+                              </div>
+                              <div class="flex flex-wrap w-1/3">
+                                <div class="w-full p-1 md:p-2">
+                                  <img alt="gallery" class="block object-cover object-center w-full h-full rounded-lg"
+                                    src="https://mdbcdn.b-cdn.net/img/Photos/Horizontal/Nature/4-col/img%20(74).webp">
+                                </div>
+                              </div>
+                              <div class="flex flex-wrap w-1/3">
+                                <div class="w-full p-1 md:p-2">
+                                  <img alt="gallery" class="block object-cover object-center w-full h-full rounded-lg"
+                                    src="https://mdbcdn.b-cdn.net/img/Photos/Horizontal/Nature/4-col/img%20(75).webp">
+                                </div>
+                              </div>
+                              <div class="flex flex-wrap w-1/3">
+                                <div class="w-full p-1 md:p-2">
+                                  <img alt="gallery" class="block object-cover object-center w-full h-full rounded-lg"
+                                    src="https://mdbcdn.b-cdn.net/img/Photos/Horizontal/Nature/4-col/img%20(70).webp">
+                                </div>
+                              </div>
+                              <div class="flex flex-wrap w-1/3">
+                                <div class="w-full p-1 md:p-2">
+                                  <img alt="gallery" class="block object-cover object-center w-full h-full rounded-lg"
+                                    src="https://mdbcdn.b-cdn.net/img/Photos/Horizontal/Nature/4-col/img%20(76).webp">
+                                </div>
+                              </div>
+                              <div class="flex flex-wrap w-1/3">
+                                <div class="w-full p-1 md:p-2">
+                                  <img alt="gallery" class="block object-cover object-center w-full h-full rounded-lg"
+                                    src="https://mdbcdn.b-cdn.net/img/Photos/Horizontal/Nature/4-col/img%20(72).webp">
+                                </div>
+                              </div>
+                            </div>
+                          </div>
+                        </section>
+                        <section class="overflow-hidden text-gray-700">
+                          <div class="container px-5 py-2 mx-auto lg:pt-24 lg:px-32">
+                            <div class="flex flex-wrap -m-1 md:-m-2">
+                              <div class="flex flex-wrap w-1/2">
+                                <div class="w-1/2 p-1 md:p-2">
+                                  <img alt="gallery" class="block object-cover object-center w-full h-full rounded-lg"
+                                    src="https://mdbcdn.b-cdn.net/img/Photos/Horizontal/Nature/4-col/img%20(70).webp">
+                                </div>
+                                <div class="w-1/2 p-1 md:p-2">
+                                  <img alt="gallery" class="block object-cover object-center w-full h-full rounded-lg"
+                                    src="https://mdbcdn.b-cdn.net/img/Photos/Horizontal/Nature/4-col/img%20(72).webp">
+                                </div>
+                                <div class="w-full p-1 md:p-2">
+                                  <img alt="gallery" class="block object-cover object-center w-full h-full rounded-lg"
+                                    src="https://mdbcdn.b-cdn.net/img/Photos/Horizontal/Nature/4-col/img%20(73).webp">
+                                </div>
+                              </div>
+                              <div class="flex flex-wrap w-1/2">
+                                <div class="w-full p-1 md:p-2">
+                                  <img alt="gallery" class="block object-cover object-center w-full h-full rounded-lg"
+                                    src="https://mdbcdn.b-cdn.net/img/Photos/Horizontal/Nature/4-col/img%20(74).webp">
+                                </div>
+                                <div class="w-1/2 p-1 md:p-2">
+                                  <img alt="gallery" class="block object-cover object-center w-full h-full rounded-lg"
+                                    src="https://mdbcdn.b-cdn.net/img/Photos/Horizontal/Nature/4-col/img%20(75).webp">
+                                </div>
+                                <div class="w-1/2 p-1 md:p-2">
+                                  <img alt="gallery" class="block object-cover object-center w-full h-full rounded-lg"
+                                    src="https://mdbcdn.b-cdn.net/img/Photos/Horizontal/Nature/4-col/img%20(77).webp">
+                                </div>
+                              </div>
+                            </div>
+                          </div>
+                        </section>
                         <div class="max-w-7xl mx-auto px-4 sm:px-6 lg:px-8 mt-6">
                           <div class=" -mx-4">
                             <div class="px-4">
@@ -573,7 +649,6 @@
                                 <div class="h-64 md:h-80 rounded-lg mb-4">
                                   <div x-show="image === 1"
                                     class="h-64 md:h-80 rounded-lg  mb-4 flex items-center justify-center">
-                                    <!-- <span class="text-5xl">1</span> -->
                                     <img id="artSample1" src="" class="h-64 md:h-80 rounded-lg">
                                   </div>
 
@@ -606,7 +681,7 @@
                                         class="focus:outline-none w-full rounded-lg h-24 md:h-32 bg-gray-100 flex items-center justify-center sampleArtImgPrev"
                                         src="" />
                                       <span class="text-2xl"></span>
-                                      <!-- </button> -->
+
                                     </div>
                                   </template>
                                 </div>
