--- a/html/genre.html
+++ b/html/genre.html
@@ -138,8 +138,8 @@
         <div class="max-w-2xl mx-auto py-16 px-4 sm:py-24 sm:px-6 lg:max-w-7xl lg:px-8 dark:text-white">
           <h2 id="sectionHeading" class="text-2xl font-extrabold tracking-tight text-gray-900 dark:text-white"></h2>
       
-          <div id="recentlyPub" class="mt-6 grid grid-cols-2 dark:text-white gap-y-10 gap-x-6 md:grid-cols-3 lg:grid-cols-5 xl:gap-x-8">
-            <!-- <div class="group relative">
+          <div id="recentlyPub" class="mt-6 grid grid-cols-2 dark:text-white gap-y-10 gap-x-6 md:grid-cols-3 lg:grid-cols-6 xl:gap-x-8">
+            <div class="group relative">
               <div class="object-cover aspect-square bg-gray-200 aspect-w-1 aspect-h-1 rounded-md overflow-hidden group-hover:opacity-75">
                 <img class="aspect-square object-cover" src="https://tailwindui.com/img/ecommerce-images/product-page-01-related-product-01.jpg" class=" object-center object-cover">
               </div>
@@ -153,8 +153,34 @@
                   </h3>
               </div>
             </div>
-          </div> -->
+          </div>
         </div>
+
+        <h2 id="" class="text-2xl mt-8 font-extrabold tracking-tight text-gray-900 dark:text-white">Trending in Genre:</h2>
+      
+        <div id="recentlyPub" class="mt-6 grid grid-cols-2 dark:text-white gap-y-10 gap-x-6 md:grid-cols-3 lg:grid-cols-6 xl:gap-x-8">
+          <div class="group relative">
+            <div class="object-cover aspect-square bg-gray-200 aspect-w-1 aspect-h-1 rounded-md overflow-hidden group-hover:opacity-75">
+              <img class="aspect-square object-cover" src="https://tailwindui.com/img/ecommerce-images/product-page-01-related-product-01.jpg" class=" object-center object-cover">
+            </div>
+            <div class="mt-4 flex justify-between">
+              <div>
+                <h3 class="text-sm text-gray-700">
+                  <a>
+                    <span aria-hidden="true" class="absolute inset-0"></span>
+                    Solo leveling
+                  </a>
+                </h3>
+            </div>
+          </div>
+        </div>
+      </div>
+      <div id="recommendationDiv" class="">
+        <h2 class="text-2xl font-extrabold tracking-tight text-gray-900 dark:text-white mt-8"> Recommended For you:</h2>
+
+        <div id="recommendations"
+          class="mt-6 grid grid-cols-2 dark:text-white gap-y-10 gap-x-6 md:grid-cols-3 lg:grid-cols-6 xl:gap-x-8"></div>
+      </div>
       </div>
 
       <script>
