--- a/html/creator.html
+++ b/html/creator.html
@@ -571,7 +571,7 @@
                             <div class="flex flex-wrap -m-1 md:-m-2">
                               <div class="flex flex-wrap w-1/3">
                                 <div class="w-full p-1 md:p-2">
-                                  <img alt="gallery" class="block object-cover object-center w-full h-full rounded-lg"
+                                  <img alt="gallery" class="block object-cover object-center w-full h-full rounded-lg hov"
                                     src="https://mdbcdn.b-cdn.net/img/Photos/Horizontal/Nature/4-col/img%20(73).webp">
                                 </div>
                               </div>
@@ -611,7 +611,7 @@
                         <section class="overflow-hidden text-gray-700">
                           <div class="container px-5 py-2 mx-auto lg:pt-24 lg:px-32">
                             <div class="flex flex-wrap -m-1 md:-m-2">
-                              <div class="flex flex-wrap w-1/2">
+                              <div class="flex flex-wrap w-1/2 mx-auto">
                                 <div class="w-1/2 p-1 md:p-2">
                                   <img alt="gallery" class="block object-cover object-center w-full h-full rounded-lg"
                                     src="https://mdbcdn.b-cdn.net/img/Photos/Horizontal/Nature/4-col/img%20(70).webp">
@@ -625,7 +625,7 @@
                                     src="https://mdbcdn.b-cdn.net/img/Photos/Horizontal/Nature/4-col/img%20(73).webp">
                                 </div>
                               </div>
-                              <div class="flex flex-wrap w-1/2">
+                              <div class="flex flex-wrap w-1/2 mx-auto">
                                 <div class="w-full p-1 md:p-2">
                                   <img alt="gallery" class="block object-cover object-center w-full h-full rounded-lg"
                                     src="https://mdbcdn.b-cdn.net/img/Photos/Horizontal/Nature/4-col/img%20(74).webp">
