--- a/html/readComic.html
+++ b/html/readComic.html
@@ -21,24 +21,25 @@
 
 <body class=" font-sans leading-normal tracking-normal bg-black">
 
-	<nav id="header" class="fixed w-full z-10 top-0">
+	<nav id="header" class="fixed w-screen z-10 top-0">
 
 		<div id="progress" class="h-1 z-20 top-0"
 			style="background:linear-gradient(to right, #4dc0b5 var(--scroll), transparent 0);"></div>
 
-		<div class="w-full md:max-w-4xl mx-auto flex flex-wrap items-center justify-between mt-0 py-3">
+		<div class="w-full md:max-w-4xl mx-auto grid grid-flow-col grid-cols-3 sm:grid-flow-row items-center justify-between mt-0 py-3">
 
 			<div class="pl-4">
 				<a class="text-gray-100 text-base no-underline hover:no-underline font-extrabold" href="/">
 					YUME
 				</a>
 			</div>
-			<!-- <div class="">
-				<a class="text-gray-100 text-base no-underline hover:no-underline font-extrabold" href="/">
-					Solo Leveling
+			<div class="flex w-full justify-center">
+				<a class="text-center text-xl text-cyan-300 no-underline hover:no-underline font-extrabold px-3  " href="/">
+					Solo leveling
 				</a>
-			</div> -->
-			<div class="block lg:hidden pr-4">
+			</div>
+			
+			<!-- <div class="block lg:hidden pr-4">
 				<button id="nav-toggle"
 					class="flex items-center px-3 py-2 border rounded text-gray-500 border-gray-600 hover:text-gray-900 hover:border-green-500 appearance-none focus:outline-none">
 					<svg class="fill-current h-3 w-3" viewBox="0 0 20 20" xmlns="http://www.w3.org/2000/svg">
@@ -46,14 +47,14 @@
 						<path d="M0 3h20v2H0V3zm0 6h20v2H0V9zm0 6h20v2H0v-2z" />
 					</svg>
 				</button>
-			</div>
+			</div> -->
 
-			<div class="w-full flex-grow lg:flex lg:items-center lg:w-auto hidden mt-2 lg:mt-0 bg-gray-100 md:bg-transparent z-20"
-				id="nav-content">
+			<div class="w-full flex-grow lg:flex lg:items-center lg:w-auto  mt-2 lg:mt-0  md:bg-transparent z-20"
+				id="">
 				<ul class="list-reset lg:flex justify-end flex-1 items-center">
 					<li class="mr-3">
 						<a id="prev"
-							class="inline-block text-gray-300 no-underline hover:text-gray-900 hover:text-underline py-2 px-4 "
+							class="inline-block text-gray-300 no-underline hover:text-white hover:text-underline py-2 px-4 "
 							href="#">
 							<div class="flex items-center justify-center">
 								<svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor"
@@ -69,7 +70,7 @@
 					</li>
 					<li class="mr-3">
 						<a id="next"
-							class="inline-block text-gray-300 no-underline hover:text-gray-900 hover:text-underline py-2 px-4"
+							class="inline-block text-gray-300 no-underline hover:text-white hover:text-underline py-2 px-4"
 							href="#">
 							<div class="flex items-center justify-center">
 								Next<svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor"
