fixed art sample and shows notifications on pages

--- a/html/dashboard.html
+++ b/html/dashboard.html
@@ -886,6 +886,7 @@ flag3 = false;
   <script defer src="https://cdn.jsdelivr.net/npm/dayjs@1.11.0/plugin/relativeTime.js"></script>
   <script src="/js/init.js" type="module"></script>
   <script defer src="/js/dashboard.js" type="module"></script>
+  <script defer src="/js/notifications.js" type="module"></script>
 </body>
 
 </html>
