--- a/html/engagement.html
+++ b/html/engagement.html
@@ -823,8 +823,11 @@ flag3 = false;
     integrity="sha256-/xUj+3OJU5yExlq6GSYGSHk7tPXikynS7ogEvDej/m4=" crossorigin="anonymous"></script>
   <script defer src="https://cdn.jsdelivr.net/npm/sweetalert2@11"></script>
   <script src="https://cdn.jsdelivr.net/gh/alpinejs/alpine@v2.x.x/dist/alpine.min.js"></script>
+  <script defer src="https://cdn.jsdelivr.net/npm/dayjs@1.11.0/dayjs.min.js"></script>
+  <script defer src="https://cdn.jsdelivr.net/npm/dayjs@1.11.0/plugin/relativeTime.js"></script>
   <script src="/js/init.js" type="module"></script>
   <script defer src="/js/engagement.js" type="module"></script>
+  <script defer src="/js/notifications.js" type="module"></script>
   <script>
 
   </script>
