--- a/html/only.html
+++ b/html/only.html
@@ -579,8 +579,7 @@
 
                     <div id="artistSamplesSection" class="max-w-2xl mt-8">
                       <label class="block text-xl font-medium text-gray-700 dark:text-white"> Upload Samples </label>
-                      <p class="text-xs mt-2 ml-1 text-gray-500">Name the samples as 1.jpg, 2.jpg, etc. You can only
-                        have a maximum of 5 samples</p>
+                      <p class="text-xs mt-2 ml-1 text-gray-500">You have to upload <strong>6</strong> samples</p>
                       <div class="grid my-3 grid-flow-row grid-cols-2">
                         <div class="flex gap-3 text-sm">
                           <label for="panels"
@@ -845,8 +844,11 @@ flag3 = false;
   <script defer src="https://code.jquery.com/jquery-3.6.0.min.js"
     integrity="sha256-/xUj+3OJU5yExlq6GSYGSHk7tPXikynS7ogEvDej/m4=" crossorigin="anonymous"></script>
   <script defer src="https://cdn.jsdelivr.net/npm/sweetalert2@11"></script>
+  <script defer src="https://cdn.jsdelivr.net/npm/dayjs@1.11.0/dayjs.min.js"></script>
+  <script defer src="https://cdn.jsdelivr.net/npm/dayjs@1.11.0/plugin/relativeTime.js"></script>
   <script defer src="/js/init.js" type="module"></script>
   <script defer src="/js/only.js" type="module"></script>
+  <script defer src="/js/notifications.js" type="module"></script>
 
 </body>
 
