--- a/html/creator.html
+++ b/html/creator.html
@@ -566,83 +566,41 @@
                         <h4 class="mb-4 mt-5 text-lg font-semibold text-black dark:text-gray-300">
                           Samples:
                         </h4>
-                        <section class="overflow-hidden text-gray-700 ">
-                          <div class="container px-5 py-2 mx-auto lg:pt-12 lg:px-32">
-                            <div class="flex flex-wrap -m-1 md:-m-2">
-                              <div class="flex flex-wrap w-1/3">
-                                <div class="w-full p-1 md:p-2">
-                                  <img alt="gallery" class="block object-cover object-center w-full h-full rounded-lg"
-                                    src="https://mdbcdn.b-cdn.net/img/Photos/Horizontal/Nature/4-col/img%20(73).webp">
-                                </div>
-                              </div>
-                              <div class="flex flex-wrap w-1/3">
-                                <div class="w-full p-1 md:p-2">
-                                  <img alt="gallery" class="block object-cover object-center w-full h-full rounded-lg"
-                                    src="https://mdbcdn.b-cdn.net/img/Photos/Horizontal/Nature/4-col/img%20(74).webp">
-                                </div>
-                              </div>
-                              <div class="flex flex-wrap w-1/3">
-                                <div class="w-full p-1 md:p-2">
-                                  <img alt="gallery" class="block object-cover object-center w-full h-full rounded-lg"
-                                    src="https://mdbcdn.b-cdn.net/img/Photos/Horizontal/Nature/4-col/img%20(75).webp">
-                                </div>
-                              </div>
-                              <div class="flex flex-wrap w-1/3">
-                                <div class="w-full p-1 md:p-2">
-                                  <img alt="gallery" class="block object-cover object-center w-full h-full rounded-lg"
-                                    src="https://mdbcdn.b-cdn.net/img/Photos/Horizontal/Nature/4-col/img%20(70).webp">
-                                </div>
-                              </div>
-                              <div class="flex flex-wrap w-1/3">
-                                <div class="w-full p-1 md:p-2">
-                                  <img alt="gallery" class="block object-cover object-center w-full h-full rounded-lg"
-                                    src="https://mdbcdn.b-cdn.net/img/Photos/Horizontal/Nature/4-col/img%20(76).webp">
-                                </div>
-                              </div>
-                              <div class="flex flex-wrap w-1/3">
-                                <div class="w-full p-1 md:p-2">
-                                  <img alt="gallery" class="block object-cover object-center w-full h-full rounded-lg"
-                                    src="https://mdbcdn.b-cdn.net/img/Photos/Horizontal/Nature/4-col/img%20(72).webp">
-                                </div>
-                              </div>
-                            </div>
-                          </div>
-                        </section>
                         <section class="overflow-hidden text-gray-700">
                           <div class="container px-5 py-2 mx-auto lg:pt-24 lg:px-32">
                             <div class="flex flex-wrap -m-1 md:-m-2">
                               <div class="flex flex-wrap w-1/2">
                                 <div class="w-1/2 p-1 md:p-2">
-                                  <img alt="gallery" class="block object-cover object-center w-full h-full rounded-lg"
-                                    src="https://mdbcdn.b-cdn.net/img/Photos/Horizontal/Nature/4-col/img%20(70).webp">
+                                  <img id="artSample0" alt="gallery" class="block object-cover object-center w-full h-full rounded-lg"
+                                    src="">
                                 </div>
                                 <div class="w-1/2 p-1 md:p-2">
-                                  <img alt="gallery" class="block object-cover object-center w-full h-full rounded-lg"
-                                    src="https://mdbcdn.b-cdn.net/img/Photos/Horizontal/Nature/4-col/img%20(72).webp">
+                                  <img id="artSample1" alt="gallery" class="block object-cover object-center w-full h-full rounded-lg"
+                                    src="">
                                 </div>
                                 <div class="w-full p-1 md:p-2">
-                                  <img alt="gallery" class="block object-cover object-center w-full h-full rounded-lg"
-                                    src="https://mdbcdn.b-cdn.net/img/Photos/Horizontal/Nature/4-col/img%20(73).webp">
+                                  <img id="artSample2" alt="gallery" class="block object-cover object-center w-full h-full rounded-lg"
+                                    src="">
                                 </div>
                               </div>
                               <div class="flex flex-wrap w-1/2">
                                 <div class="w-full p-1 md:p-2">
-                                  <img alt="gallery" class="block object-cover object-center w-full h-full rounded-lg"
-                                    src="https://mdbcdn.b-cdn.net/img/Photos/Horizontal/Nature/4-col/img%20(74).webp">
+                                  <img id="artSample3" alt="gallery" class="block object-cover object-center w-full h-full rounded-lg"
+                                    src="">
                                 </div>
                                 <div class="w-1/2 p-1 md:p-2">
-                                  <img alt="gallery" class="block object-cover object-center w-full h-full rounded-lg"
-                                    src="https://mdbcdn.b-cdn.net/img/Photos/Horizontal/Nature/4-col/img%20(75).webp">
+                                  <img id="artSample4" alt="gallery" class="block object-cover object-center w-full h-full rounded-lg"
+                                    src="">
                                 </div>
                                 <div class="w-1/2 p-1 md:p-2">
-                                  <img alt="gallery" class="block object-cover object-center w-full h-full rounded-lg"
-                                    src="https://mdbcdn.b-cdn.net/img/Photos/Horizontal/Nature/4-col/img%20(77).webp">
+                                  <img id="artSample5" alt="gallery" class="block object-cover object-center w-full h-full rounded-lg"
+                                    src="">
                                 </div>
                               </div>
                             </div>
                           </div>
                         </section>
-                        <div class="max-w-7xl mx-auto px-4 sm:px-6 lg:px-8 mt-6">
+                        <!-- <div class="max-w-7xl mx-auto px-4 sm:px-6 lg:px-8 mt-6">
                           <div class=" -mx-4">
                             <div class="px-4">
                               <div x-data="{ image: 1 }" x-cloak>
@@ -688,7 +646,7 @@
                               </div>
                             </div>
                           </div>
-                        </div>
+                        </div> -->
                       </div>
                       <h4 id="workedWith" class="mt-7 text-lg font-semibold text-black dark:text-gray-300">
                         Worked With:
