--- a/html/creator.html
+++ b/html/creator.html
@@ -563,11 +563,11 @@
                     <div class="w-full overflow-x-auto">
 
                       <div id="sampleArtsContainer">
-                        <h4 class="mb-4 mt-5 text-lg font-semibold text-black dark:text-gray-300">
+                        <h4 class=" mt-5 text-lg font-semibold text-black dark:text-gray-300 ">
                           Samples:
                         </h4>
-                        <section class="overflow-hidden text-gray-700">
-                          <div class="container px-5 py-2 mx-auto lg:pt-24 lg:px-32">
+                        <section class="overflow-hidden text-gray-700 h-full">
+                          <div class="container px-5 py-2 mx-auto lg:pt-3 lg:px-4">
                             <div class="flex flex-wrap -m-1 md:-m-2">
                               <div class="flex flex-wrap w-1/2 mx-auto">
                                 <div class="w-1/2 p-1 md:p-2">
@@ -654,7 +654,7 @@
                       <div class="w-full mb-8 overflow-hidden rounded-lg shadow-xs">
                         <div class="w-full overflow-x-auto">
                           <div id="workedWithContainer"
-                            class="mt-6 grid grid-cols-2 dark:text-white gap-y-10 gap-x-6 md:grid-cols-3 lg:grid-cols-5 xl:gap-x-8">
+                            class="mt-6 grid grid-cols-2 dark:text-white gap-y-10 gap-x-6 md:grid-cols-3 lg:grid-cols-6 xl:gap-x-8">
                             <!-- <div class="group relative">
                                     <div class="object-cover aspect-square bg-gray-200 aspect-w-1 aspect-h-1 rounded-md overflow-hidden group-hover:opacity-75">
                                       <img class="aspect-square object-cover" src="https://external-content.duckduckgo.com/iu/?u=https%3A%2F%2Fimg00.deviantart.net%2F1614%2Fi%2F2011%2F273%2F8%2F5%2Felectric_dragon_by_insanable-d4bczwp.jpg&f=1&nofb=1" class=" object-center object-cover">
